[project]
name = "ppo-mujoco"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "glfw>=2.10.0",
    "gymnasium[other]>=1.2.3",
    "imageio>=2.37.3",
    "matplotlib>=3.10.8",
    "mujoco>=3.6.0",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "stable-baselines3>=2.7.1",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
    "wandb>=0.25.1",
]
